--- a/Task-1 Prediction using Supervised ML.ipynb
+++ b/Task-1 Prediction using Supervised ML.ipynb
@@ -113,6 +113,27 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "be8e6647",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "713b2af5",
    "metadata": {},
    "outputs": [
@@ -122,7 +143,7 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "12b1e3b7",
    "metadata": {},
    "outputs": [
@@ -164,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5a9a9c51",
    "metadata": {},
    "outputs": [
@@ -214,7 +235,7 @@
        "Scores  0.976191  1.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d9e6eae0",
    "metadata": {},
    "outputs": [],
@@ -255,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2478a658",
    "metadata": {},
    "outputs": [
@@ -283,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "28f3f4d5",
    "metadata": {},
    "outputs": [
@@ -319,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1c486cd8",
    "metadata": {},
    "outputs": [
@@ -387,7 +408,7 @@
        "4    5.9        60.491033"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "928641c0",
    "metadata": {},
    "outputs": [
@@ -475,7 +496,7 @@
        "4    5.9        60.491033            62"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f19f947e",
    "metadata": {},
    "outputs": [
@@ -524,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d8abadff",
    "metadata": {},
    "outputs": [
@@ -561,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5754f2d9",
    "metadata": {},
    "outputs": [
